--- a/snakeviz/templates/viz.html
+++ b/snakeviz/templates/viz.html
@@ -14,7 +14,7 @@
 
   <body>
     <h1 id="snakeviz-text">SnakeViz</h1>
-
+    <h2 style="text-align: center">{{'.'.join(profile_name.split('.')[:-3])}}</h2>
     <!-- reset button -->
     <button id="resetbutton" disabled="True">Reset</button>
 
